# fast-api-jwt-users-template

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: utils.py
app/api/routes/: login.py  users.py
app/core/: config.py  security.py
scripts/: prestart.sh
