[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pyjwt = "^2.10.0"
sqlmodel = "^0.0.22"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.6.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
tenacity = "^9.0.0"
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
